Bug fix. Icon spacing broke the vertical buttons.

--- a/resources/private/common-html/sass/partials/_buttons.scss
+++ b/resources/private/common-html/sass/partials/_buttons.scss
@@ -281,6 +281,9 @@ button.btn-dialog, .btn-dialog {
 /* } */
 
 // New buttons
+
+$btn-spacer: 12px;
+
 [type=submit], .btn, button {
   border: none;
   min-height: 40px;
@@ -296,10 +299,10 @@ button.btn-dialog, .btn-dialog {
   //display: table;
   cursor: pointer;
   padding: {
-    left: 12px;
+    left: $btn-spacer;
     top: 0;
     bottom: 0;
-    right: 12px;
+    right: $btn-spacer;
   }
   span, i {
     vertical-align: middle;
@@ -356,10 +359,14 @@ button.btn-dialog, .btn-dialog {
   text-align: center;
   vertical-align: default;
   padding: {
-    top: 12px;
+    top: $btn-spacer;
     left: 0;
     right: 0;
-    bottom: 12px;
+    bottom: $btn-spacer;
+  }
+  :first-child {
+    // Undo the icon spacing.
+    padding-right: 0;
   }
   span {
     padding: 0;
@@ -367,8 +374,8 @@ button.btn-dialog, .btn-dialog {
     text-align: center;
     max-width: $lupicon-size;
     margin: {
-      top: 12px;
-      bottom: 12px;
+      top: $btn-spacer;
+      bottom: $btn-spacer;
     }
   }
 }
@@ -587,7 +594,7 @@ span + .waiting.wait {
 // Only inner margins
 .inner-margins {
   .btn, button, div, a {
-    margin-left: 12px;
+    margin-left: $btn-spacer;
   }
   :first-child {
     margin-left: 0;
@@ -597,7 +604,7 @@ span + .waiting.wait {
 .inner-margins.stacked {
   .btn, button, div, a {
     margin-left: 0;
-    margin-top: 12px;
+    margin-top: $btn-spacer;
   }
   :first-child {
     margin-top: 0;
@@ -607,7 +614,7 @@ span + .waiting.wait {
 // Margin between form buttons.
 
 .form-buttons button {
-  margin-left: 12px;
+  margin-left: $btn-spacer;
 }
 
 #partiesDocgen button {
